--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.24.5",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
