--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@react-google-maps/api": "^2.20.6",
     "antd": "^5.24.5",
+    "leaflet": "^1.9.4",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
