--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@react-google-maps/api": "^2.20.6",
     "antd": "^5.24.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "swiper": "^11.2.6",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
