--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
@@ -25,7 +26,8 @@
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
