--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.2",
     "@react-google-maps/api": "^2.20.6",
     "antd": "^5.24.5",
     "class-variance-authority": "^0.7.1",
