--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.9.2",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
