--- a/tsat-frontend-project/package.json
+++ b/tsat-frontend-project/package.json
@@ -47,6 +47,7 @@
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "vuex": "^4.1.0",
     "zod": "^3.24.3"
   },
